# mrui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/components/algorithms/: DirectReconstructionForm.tsx  MrproCommonParams.tsx  SenseForm.tsx  registry.ts  types.ts
frontend/src/components/jobs/: JobDetail.tsx  JobList.tsx  JobListItem.tsx  NewJobForm.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx  select.tsx  tooltip.tsx
frontend/src/components/viewer/: ReglCanvas.tsx  ViewerControls.tsx  VolumeViewer.tsx  colormaps.ts  transform.ts
frontend/src/types/: generated.ts  index.ts
frontend/src/utils/: regl-webgl2-compat.ts
mrui/: deps.py  dev.py  job_status.py  jobs.py  main.py  models.py  queue.py  settings.py  storage.py
mrui/algorithms/: __init__.py  base.py  direct_reconstruction.py  sense.py
