[project]
name = "mrui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.1",
    "h5py>=3.11.0",
    "huey>=2.5.3",
    "numpy>=2.1.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
    "mrtwo",
    "torch>=2.7",
]

[project.scripts]
dev = "mrui.dev:run_dev"
prod = "mrui.dev:run_prod"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrui"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
